frontend/test/should_fail/keepOneForEach_iterated_accumulation_method_type_mismatch.grg
test t
{
	iterated it {
	---
		def var i:int;
		def var j:string;
	} \ keepOneForEach<i>Accumulate<j>By<sum>
}
